# clockman

./: .gitignore  CLOCKMAN_GUIDE.md  CONTRIBUTING.md  LICENSE  README.md  changes.txt  pyproject.toml  requirements.txt
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pr-validation.yml  release.yml  security.yml
clockman/: __init__.py  __main__.py
clockman/cli/: __init__.py  main.py
clockman/core/: __init__.py  time_tracker.py
clockman/db/: __init__.py  models.py  repository.py  schema.py
clockman/integrations/: __init__.py  config.py  hooks.py  manager.py  testing.py
clockman/integrations/events/: __init__.py  event_manager.py  events.py
clockman/integrations/examples/: __init__.py  advanced_plugin_examples.py  advanced_webhook_examples.py  logging_plugin.py  webhook_example.py
clockman/integrations/plugins/: __init__.py  base.py  dependencies.py  loader.py  manager.py
clockman/integrations/webhooks/: __init__.py  models.py  webhook_manager.py
clockman/tests/: __init__.py  conftest.py  test_cli_main.py  test_config.py  test_formatting.py  test_models.py  test_notification.py  test_repository.py  test_schema.py  test_time_tracker.py
clockman/utils/: __init__.py  config.py  notifier.py  time_validation.py
trackit/: __init__.py
trackit/cli/: __init__.py  main.py
trackit/core/: __init__.py  time_tracker.py
trackit/db/: __init__.py  models.py  repository.py  schema.py
trackit/tests/: __init__.py  conftest.py  test_cli_main.py  test_config.py  test_formatting.py  test_models.py  test_notification.py  test_repository.py  test_schema.py  test_time_tracker.py
trackit/tray/: __init__.py  icons.py  notifications.py  tray_main.py  tray_manager.py
trackit/utils/: __init__.py  config.py  formatting.py  notifier.py
