[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clockman"
version = "1.0.0"
description = "Terminal-based time tracking for developers"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Theany Team", email = "epicrr001@gmail.com"},
]
keywords = ["time-tracking", "cli", "productivity", "terminal"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Utilities",
]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "platformdirs>=4.0.0",
    "pydantic>=2.5.0",
    "desktop-notifier>=6.0.0",
    "httpx>=0.25.0",
    "tenacity>=8.2.0"
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0"
]

[project.scripts]
clockman = "clockman.cli.main:app"

[project.urls]
Homepage = "https://github.com/theany-org/clockman"
Repository = "https://github.com/theany-org/clockman.git"
Issues = "https://github.com/theany-org/clockman/issues"

[tool.hatch.build.targets.wheel]
packages = ["clockman"]


[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["clockman"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

